imporved form function to return sum of added salaries

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/date -->
         <form id="add-employee-form" onSubmit="submitForm(event)">
             <h2>Add Employee</h2>
-            <input id="first" type="text" placeholder="First Name" required/>
-            <input id="last" type="text" placeholder="Last Name" required/>
-            <input id="id" type="number" placeholder="ID" required/>
-            <input id="title" type="text" placeholder="Title" required/>
-            <input id="salary" type="number" placeholder="Annual Salary" required/>                
+            <input id="first" type="text" placeholder="First Name"/>
+            <input id="last" type="text" placeholder="Last Name"/>
+            <input id="id" type="text" placeholder="ID"/>
+            <input id="title" type="text" placeholder="Title"/>
+            <input id="salary" type="number" placeholder="Annual Salary"/>                
             <br>
             <br>
             <input type="submit"/>
@@ -46,7 +46,7 @@
             </tbody>
         </table>
         <div>
-            <h3>Total Monthly: <span id="high-temp">$0</span></h3>
+            <h3>Total Monthly: <span id="monthly-amount">$0</span></h3>
         </div>
     </div>
     
