improved function to turn monthly red if over 20000

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <!-- innerHTML -->
             </tbody>
         </table>
-        <div>
+        <div id="Monthly">
             <h3>Total Monthly: <span id="monthly-amount">$0</span></h3>
         </div>
     </div>
