--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <h1>Salary Calculator</h1>
     </header>
     <div id="content">
-        <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/date -->
         <form id="add-employee-form" onSubmit="submitForm(event)">
             <h2>Add Employee</h2>
             <input id="first" type="text" placeholder="First Name"/>
@@ -28,7 +27,6 @@
         </form>
         <br>
         <table id="employee-info">
-            <!-- Table heading displays the descriptions -->
             <thead>
                 <tr>
                     <th>First Name</th>
@@ -36,13 +34,13 @@
                     <th>ID</th>
                     <th>Title</th>
                     <th>Annual Salary</th>
-                    <th></th>
+                    <th><!-- innerHTML --></th>
                 </tr> 
             </thead>
             <tbody id="employeeList">
                 <tr>
+                    <!-- innerHTML -->
                 </tr>
-                <!-- innerHTML -->
             </tbody>
         </table>
         <div id="Monthly">
